fixed for CHLK-2975 Need align the tooltip

--- a/Chalkable.Web/assets/sass/partials/sidebar/_week.scss
+++ b/Chalkable.Web/assets/sass/partials/sidebar/_week.scss
@@ -41,7 +41,7 @@
             text-decoration: none;
             white-space: nowrap;
             overflow: hidden;
-            width: 160px;
+            max-width: 160px;
             display: inline-block;
             text-overflow: ellipsis;
           }
